@@ -1,3 +1,7 @@
+2008-04-19  Torsten Schoenfeld  <kaffeetisch@gmx.de>
+
+	* Cairo.pm: Add documentation for new API.
+
 2008-03-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
 	* Makefile.PL: Trap exceptions thrown by EU::PkgConfig->find.
